# cfrac

./: .gitignore  ChangeLog.md  README.md  cfrac.cabal  package.yaml  stack.yaml
src/: Fraction.hs
